@@ -1,6 +1,10 @@
 Revision history for SPVM
 
 0.9133  2021-01-29
+        [CHANGE]
+        * byte[] object is available in eq, ne, gt, ge, lt, le, cmp . operators.
+        [FIX BAG]
+        * Fix the messages of the compilation errors of eq, ne, gt, ge, lt, le, cmp operator.
         [FIX DOCUMENT BAG]
         * Add the document of get_bool_object_value of Native APIs.
 
